# Coeus

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  Makefile  README.md  coeus_spec_driven_implementation_plan.md  docker-compose.yml  knip.json  knip.production.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/src/coeus/: main.py  (+2 more)
apps/api/tests/: active_work_test_helpers.py  ai_model_helpers.py  conftest.py  feedback_analytics_test_helpers.py  jioc_test_helpers.py  rfi_search_helpers.py  routing_helpers.py  store_api_helpers.py  store_projection_helpers.py  test_access_api.py  test_access_control.py  test_access_services.py  test_acg_application_edges.py  test_acg_applications_api.py  test_acg_catalogue_search.py  test_active_work_discovery_api.py  test_active_work_discovery_branches.py  test_admin_analytics.py  test_advisory_agent_integration.py  test_advisory_egress.py  test_advisory_persistence.py  test_agent_run_schema.py  test_aggregate_boundaries.py  test_ai_model_api.py  test_ai_model_discovery_api.py  test_ai_model_service.py  test_ai_provider_switch_api.py  test_analyst_api.py  test_analyst_assignment.py  test_analyst_conversation_api.py  test_analyst_draft_link_security.py  test_analyst_file_helpers.py  test_analyst_linked_product_reauthorisation.py  test_analyst_parser_thread.py  test_analyst_reassignment_api.py  test_analyst_workflow_rollback_api.py  test_append_only_audit_migration.py  test_architecture_boundaries.py  test_asset_tokens.py  test_async_search_limits.py  (+218 more)
(+1045 files in other folders)
