[project]
name = "coeus-api"
version = "0.1.0"
description = "FastAPI service for Coeus"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16.4",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.116.1",
  "httpx>=0.28.1",
  "orjson>=3.11.0",
  "psycopg[binary]>=3.2.14",
  "pydantic-settings>=2.10.1",
  "sqlalchemy[asyncio]>=2.0.41",
  "uvicorn[standard]>=0.35.0"
]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "coverage[toml]>=7.10.0",
  "hypothesis>=6.136.9",
  "mypy>=1.17.0",
  "pip-audit>=2.9.0",
  "polyfactory>=2.22.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.4",
  "semgrep>=1.128.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coeus"]

[tool.pytest.ini_options]
addopts = "--cov=coeus --cov-report=term-missing --cov-fail-under=95"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["coeus"]
omit = ["*/db/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "T20", "RUF"]
ignore = [
  "S101"
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unreachable = true
packages = ["coeus"]
